Stop zooming on iOS devices

--- a/tv-remote/css/main.css
+++ b/tv-remote/css/main.css
@@ -1,3 +1,8 @@
+/* Stop zooming on iOS devices */
+body {
+    touch-action: manipulation;
+}
+
 /* Background remote control color thus button color */
 body, button {
     background-color: #424242;
